repos/distributedstatemachine/gcloud_hub/hub-kube/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-server-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hub-cluster.ezkl.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-server-service
            port:
              number: 80
  tls:
  - hosts:
    - hub-cluster.ezkl.xyz
    secretName: cloudflare-tls-secret
